--- a/tutorials/lessons/179/k8s/argocd-notifications-secret.yaml
+++ b/tutorials/lessons/179/k8s/argocd-notifications-secret.yaml
@@ -5,4 +5,4 @@ metadata:
   name: argocd-notifications-secret
   namespace: argocd
 stringData:
-  slack-token: xoxb-1494779483671-6088931066881-fKSjTefxBAUvVgFiRgwmnTSz
+  slack-token: 
